--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,10 +1,10 @@
-$color-btn-activo: #F50500;
+$color-btn-activo: #B31B1E;
 $color-btn-disabled: #C2C2C2;
 $grisOscuro: rgba(194, 194, 194, 0.747);
 $grissOscuro: #666674;
 $color-error: #fd0019;
 $color-white: #fff;
-$color-mercadolibre: #F50500;
+$color-mercadolibre: #B31B1E;
 $color-fondo: #F4F4F4;
 $color-transparent:transparent;
 $color-negro: #000000;
@@ -12,7 +12,7 @@ $color-rojo: #F10024;
 $gris-tenue: #e9e9e9be;
 $gris-transparente: #E1E2E2;
 $gris: #ebebeb;
-$numeroStep: #F50500;
+$numeroStep: #B31B1E;
 
 
 /* Responsive */
