Cambio de look an feel Volvo

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,18 +1,18 @@
-$color-btn-activo: #B31B1E;
+$color-btn-activo: #003057;
 $color-btn-disabled: #C2C2C2;
 $grisOscuro: rgba(194, 194, 194, 0.747);
 $grissOscuro: #666674;
 $color-error: #fd0019;
 $color-white: #fff;
-$color-mercadolibre: #B31B1E;
-$color-fondo: #F4F4F4;
+$color-mercadolibre: #003057;
+$color-fondo: #003057;
 $color-transparent:transparent;
 $color-negro: #000000;
 $color-rojo: #F10024;
 $gris-tenue: #e9e9e9be;
 $gris-transparente: #E1E2E2;
 $gris: #ebebeb;
-$numeroStep: #B31B1E;
+$numeroStep: #003057;
 
 
 /* Responsive */
