Corrección palabra Valor

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -66,7 +66,7 @@
                                                             (ngModelChange)="changeButtonCliente(cuotas)"
                                                             [min]="minF"
                                                             required>
-                                                            <mat-error id="uno" class="col-12 error" *ngIf="valorFinanciar.touched && valorFinanciar.errors?.min || valorFinanciar.errors?.required" class="error error col-12">Inserta un valor correcto, el valir mínimo debe ser $ {{minF | number:'1.0-0':'es'}}</mat-error>
+                                                            <mat-error id="uno" class="col-12 error" *ngIf="valorFinanciar.touched && valorFinanciar.errors?.min || valorFinanciar.errors?.required" class="error error col-12">Inserta un valor correcto, el valor mínimo debe ser $ {{minF | number:'1.0-0':'es'}}</mat-error>
                                                     </mat-form-field>
                                             </div>
     
