--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -306,7 +306,7 @@
     
                             <div class="row">
                                 <div class="col-12 col-sm-6 col-md-4 col-lg-4">
-                                    <img class="logSantander" src="../../../assets/consumerFinance.png" alt="">
+                                    <img class="logSantander" src="assets/consumerFinance.png" alt="">
                                 </div>
                                 
                                 <div class="col-12 col-sm-6 col-md-8 col-lg-8">
@@ -352,7 +352,7 @@
                         <div *ngIf="aprobado" class="col-12 container text-center animated fadeIn">                                     
                             <p class="title">¡Listo!</p>
                             <hr>  
-                            <img class="img-fluid" src="../../../assets/aprobado.png" alt="">
+                            <img class="img-fluid" src="assets/aprobado.png" alt="">
                             <p class="aprobado">¡Tu crédito es viable!</p>
                             <p class="small">
                                 Pronto uno de nuestros asesores te llamara para acompañarte hasta que tengas tu vehículo.
@@ -365,7 +365,7 @@
                     <div *ngIf="negado" class="col-12 container text-center animated fadeIn">
                         <p class="title">¡Lo sentimos!</p>
                         <hr>  
-                        <img class="img-fluid" src="../../../assets/negado.png" alt="">
+                        <img class="img-fluid" src="assets/negado.png" alt="">
                         <p class="negado">¡Tu solicitud de crédito no es viable en estos momentos!</p>
                         <p class="small">
                             Esperamos que cuentes con nosotros en una próxima oportunidad.
@@ -374,7 +374,7 @@
                     </div>
     
                     <div class="col-12 col-sm-12 col-md-12 contButton">
-                        <img src="../../../assets/consumerFinance.png" alt="">
+                        <img src="assets/consumerFinance.png" alt="">
                         <button mat-button class="full-width siguiente" id="stepTwo" (click)="reload()">VOLVER A VOLVO</button>
                     </div>
               </div>
@@ -388,7 +388,7 @@
                 <div class="col-12 pie">
                         <div></div>
                         <div class="contPie">
-                        <img src="../../../assets/costumerFinance.png" alt="" class="santanderGray"><br>
+                        <img src="assets/costumerFinance.png" alt="" class="santanderGray"><br>
                         <p class="small">© {{dateNow}} – Solicitud de Crédito - Entidad vigilada por la Superintendencia Financiera de Colombia</p>
                         </div>
                         <div></div>
