actualizacion de seguridad

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -183,7 +183,7 @@
                             name="Nombre1"
                             minlength="3"
                             maxlength="90"
-                            [(ngModel)]="contacto.DatosBasicos.Nombre1"
+                            [(ngModel)]="centrales.contacto.DatosBasicos.Nombre1"
                             #nombre="ngModel"
                             (keypress)="patternCoincide($event, env.patternLetter)"
                             [(pattern)]="env.patternLetter"
@@ -199,7 +199,7 @@
                                         <select 
                                             matNativeControl
                                             name="TipoDocumento"
-                                            [(ngModel)]="contacto.DatosBasicos.TipoDocumento"
+                                            [(ngModel)]="centrales.contacto.DatosBasicos.TipoDocumento"
                                             #tipoDocumento="ngModel" 
                                             required
                                         >
@@ -215,7 +215,7 @@
                                 matInput
                                 type="tel"
                                 name="NumeroDocumento"
-                                [(ngModel)]="contacto.DatosBasicos.NumeroDocumento"
+                                [(ngModel)]="centrales.contacto.DatosBasicos.NumeroDocumento"
                                 #numeroDocumento="ngModel"
                                 minlength="6"
                                 maxlength="15"
@@ -237,7 +237,7 @@
                                     type="tel"  
                                     placeholder="Teléfono de contacto"
                                     name="Celular"
-                                    [(ngModel)]="contacto.DatosBasicos.Celular"
+                                    [(ngModel)]="centrales.contacto.DatosBasicos.Celular"
                                     minlength="10" 
                                     maxlength="10"
                                     #celular="ngModel"
@@ -259,7 +259,7 @@
                                 type="text"
                                 placeholder="Correo electrónico"
                                 name="CorreoPersonal"
-                                [(ngModel)]="contacto.DatosBasicos.CorreoPersonal"
+                                [(ngModel)]="centrales.contacto.DatosBasicos.CorreoPersonal"
                                 #correoPersonal="ngModel"
                                 [(pattern)]="env.patternMail"
                                 required
@@ -274,7 +274,7 @@
                                     <select 
                                         matNativeControl
                                         name="ActividadEconomica"
-                                        [(ngModel)]="contacto.DatosFinancieros.ActividadEconomica"
+                                        [(ngModel)]="centrales.contacto.DatosFinancieros.ActividadEconomica"
                                         #ocupacion="ngModel"
                                         #tipoDocumento="ngModel" 
                                         required
@@ -295,7 +295,7 @@
                                         placeholder="Ingresos Mensuales"
                                         name="ingresoMensual"
                                         #ingresoMensual="ngModel"
-                                        [(ngModel)]="contacto.DatosFinancieros.IngresoMensual"
+                                        [(ngModel)]="centrales.contacto.DatosFinancieros.IngresoMensual"
                                         [min]="min"                                    
                                         required>                               
                                         <mat-error *ngIf="ingresoMensual.touched && ingresoMensual.errors?.required">Inserta tus ingresos mensuales</mat-error>       
@@ -322,7 +322,7 @@
                                 value="" 
                                 id="defaultCheck1"
                                 name="AutorizaConsultaCentrales"
-                                [(ngModel)]="contacto.OtrosDatos.AutorizaConsultaCentrales"
+                                [(ngModel)]="centrales.contacto.OtrosDatos.AutorizaConsultaCentrales"
                                 (click)="chechedc()"
                                 #autorizaConsultaCentrales="ngModel"
                                 ></mat-checkbox>
